2002-04-17  Marius Vollmer  <mvo@zagadka.ping.de>

	* Makefile.am (EXTRA_DIST): Added cpp_err_symbols.c and
	cpp_sig_symbols.c.

2002-04-16  Marius Vollmer  <mvo@zagadka.ping.de>

	* guile-snarf.in: Do not clean input file.  This would write to
	the $(srcdir) during a VPATH build, which is not allowed.  It also
	isn't needed since it only works when an output filename has been
	specified and in that case we don't need to clean the input file
	because the output file will already exist.

2002-03-31  Marius Vollmer  <mvo@zagadka.ping.de>

	* guile-snarf: Install the trap for removing $cleanfile only when
	the value of $cleanfile is actually known.

2002-04-10  Rob Browning  <rlb@defaultvalue.org>

	* .cvsignore: add versiondat.h and *.c.clean.c.

2002-03-26  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* srcprop.[ch] (scm_c_source_property_breakpoint_p):  New
	function, replaces macro SRCBRKP.

	(SRCBRKP):  Deprecated.

	* eval.c (SCM_CEVAL): Replaced use of SRCBRKP by call to
	scm_c_source_property_breakpoint_p.  Removed some use of arg1 as
	temporary variable.

2002-03-25  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* debug.h, eval.c: Deprecated CHECK_ENTRY, CHECK_APPLY and
	CHECK_EXIT and removed all references to them.

2002-03-24  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* debug.h (scm_ready_p, debug_print): Removed declarations.

	* eval.c (EVALCELLCAR): Removed.

	(SCM_CEVAL): Eliminated label loopnoap.  Removed side-effecting
	operation from condition.

2002-03-24  Marius Vollmer  <mvo@zagadka.ping.de>

	* guile-snarf.in: When the output filename is "-", write to
	stdout.  When no "-o" option is given, use "-" as the output
	filename (i.e., stdout).  Only 'clean' the inputfile or remove the
	output file on error when the output file name is not "-".  Define
	the preprocessor macro SCM_MAGIC_SNARFER while snarfing.

	* Makefile.am (.c.x): Pass "-o $@" to guile-snarf.

2002-03-23  Dirk Herrmann  <D.Herrmann@tu-bs.de>
