@@ -78,9 +78,6 @@ root_mark (SCM root)
   scm_gc_mark (s->cur_inp);
   scm_gc_mark (s->cur_outp);
   scm_gc_mark (s->cur_errp);
-  scm_gc_mark (s->def_inp);
-  scm_gc_mark (s->def_outp);
-  scm_gc_mark (s->def_errp);
   /* No need to gc mark def_loadp */
   scm_gc_mark (s->fluids);
   return SCM_ROOT_STATE (root) -> parent;
@@ -125,9 +122,6 @@ scm_make_root (SCM parent)
 	= root_state->cur_inp
 	= root_state->cur_outp
 	= root_state->cur_errp
-	= root_state->def_inp
-	= root_state->def_outp
-	= root_state->def_errp
 	= root_state->cur_loadp
 	= root_state->fluids
 	= root_state->handle
